--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>MyEasyJobs</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
-</html>
+<%= render 'layouts/head_and_body' %>
+   <%= yield %>
+ <%= render 'layouts/footer_and_body' %>
